--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "egg-scripts": "^2.11.0",
     "egg-sequelize": "^5.2.0",
     "egg-sqlite3": "^1.0.1",
+    "egg-view-ejs": "^2.0.0",
     "egg-view-nunjucks": "^2.2.0",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3"
