--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
     "egg": "^2.15.1",
     "egg-scripts": "^2.11.0",
     "egg-sequelize": "^5.2.0",
-    "egg-sqlite3": "^1.0.1",
     "egg-view-ejs": "^2.0.0",
     "pg": "^7.12.1",
-    "pg-hstore": "^2.3.3",
-    "egg-view-nunjucks": "^2.2.0"
+    "pg-hstore": "^2.3.3"
   },
   "devDependencies": {
     "autod": "^3.0.1",
