--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,14 @@
 {
   "include": [
     "**/*"
+  ],
+  "exclude": [
+    "node_modules/",
+    "app/public/",
+    "app/view/",
+    "public/",
+    "app/mocks/",
+    "coverage/",
+    "logs/"
   ]
 }
